# outernet_fire_sim

./: LICENSE  README.md  flake.nix  pyproject.toml
outernet_fire_sim/: fire.py
